# epoo

./: .gitignore  CMakeLists.txt  README.md  install_cmake.sh  utils.sh
scripts/: bateria.py  drone.py  s1000.py
src/: CMakeLists.txt
src/drone/: Bateria.hpp  CMakeLists.txt  Drone.hpp  S1000.hpp
test/: CMakeLists.txt  test.cpp
